--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t pakdboth/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run pakdboth/docker-react npm run test -- --coverage
+    - docker run -e CI=true pakdboth/docker-react npm run test -- --coverage
