--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,14 @@ before_install:
 script:
     - docker run -e CI=true pakdboth/docker-react npm run test -- --coverage
 
-
+deploy:
+    provider: elasticbeanstalk
+    region: "ap-southeast-1"
+    app: "docker-react"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-ap-southeast-1-450668009614"
+    bucket_path: "docker-react"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
