--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t pakdboth/docker-react -f Dockerfile.dev .
+    - docker build -t pakdboth/docker-react -f Dockerfile .
 
 script:
     - docker run -e CI=true pakdboth/docker-react npm run test -- --coverage
